test/classes/delete-free/error-owned-record.good
error-owned-record.chpl:4: error: owned only works with classes
